# tue_reasoner_core

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
database/: geometry.pl  gpsr_kb.pl  knowledge.db  knowledge.pl  knowledge_test.pl  locations_hospital_room.pl  planner.pl  restructured_knowledge.pl  std.pl  test.pl
include/reasoner/: Reasoner.h  ReasonerServer.h  conversions.h
include/tue_reasoner/: BindingSet.h  Compound.h  Parser.h  Reasoner.h  ReasonerServer.h  Term.h  Value.h  Variable.h
launch/: gpsr_kb_test.launch  restructured_start.launch  start.launch  start_for_knowrob.launch  test.launch
models/: world_object_models.xml
prolog/: std.pl
scripts/: run  run_with_prolog_package  test_reasoner_py.py
src/: BindingSet.cpp  Compound.cpp  Parser.cpp  Reasoner.cpp  ReasonerServer.cpp  Term.cpp  Value.cpp  Variable.cpp  conversions.cpp  reasoner.cpp  reasoner_node.cpp  repl.cpp  test_reasoner.cpp  test_swi.cpp
test/: utest.py
