<?xml version="1.0"?>
<package>
  <name>tue_reasoner_core</name>
  <version>0.0.0</version>
  <description>The tue_reasoner_core package</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>psi</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>psi</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>

</package>
